ui/app/pages/swaps/view-quote/index.scss
.view-quote {
  display: flex;
  flex-flow: column;
  align-items: center;
  flex: 1;
  width: 100%;

  &__content {
    display: flex;
    flex-flow: column;
    align-items: center;
    width: 100%;
    height: 100%;
    padding-left: 20px;
    padding-right: 20px;
    justify-content: space-between;
    margin-top: 8px;

    @media screen and (max-width: 576px) {
      overflow-y: auto;
      max-height: 388px;
    }
  }

  @media screen and (min-width: 576px) {
    width: 348px;
  }

  &__new-quote-countdown {
    @include H7;

    font-weight: bold;

    &--danger {
      span {
        color: $Red-500;
      }
    }
  }

  &__view-other-button-container {
    border-radius: 28px;
    width: 100%;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  &__view-other-button,
  &__view-other-button-fade {
    display: flex;
    align-items: center;
    margin-bottom: 16px;
    position: absolute;

    @include H7;

    color: white;
    font-weight: bold;
    cursor: pointer;
    border-radius: 28px;
    padding: 5px 18px;
    background: linear-gradient(90deg, $Blue-500 0%, $Blue-400 101.32%);


    @media screen and (min-width: 576px) {
      @include H6;

      margin-bottom: 0;
    }

    .fa-arrow-right {
      margin-left: 4px;
      font-size: 10px;
      margin-top: 2px;
    }
  }

  &__view-other-button-fade {
    background: #0372c3;
    opacity: 0;
    transition: opacity ease-in-out 1s;

    &:hover {
      opacity: 1;
    };
  }

  &__price-difference-warning {
    &-wrapper {
      width: 100%;

      &.medium .actionable-message,
      &.fiat-error .actionable-message {
        border-color: $Yellow-500;
        background: $Yellow-100;

        .actionable-message__message {
          color: inherit;
        }
      }

      &.high .actionable-message {
        border-color: $Red-500;
        background: $Red-100;

        .actionable-message__message {
          color: $Red-500;
        }
      }

      /* Hides info tooltip if there's a fiat error message */
      &.fiat-error div[data-tooltipped] {
        /* !important overrides style being applied directly to tooltip by component */
        display: none !important;
      }
    }

    &-contents {
      display: flex;

      &-title {
        font-weight: bold;
      }

      i {
        margin-inline-start: 10px;
      }
    }
  }

  &__insufficient-eth-warning-wrapper {
    width: 100%;
    align-items: center;
    justify-content: center;

    @media screen and (min-width: 576px) {
      min-height: 36px;
      display: flex;
    }
  }

  &__bold {
    font-weight: bold;
  }

  &__countdown-timer-container {
    @media screen and (max-width: 576px) {
      margin-top: 12px;
      margin-bottom: 16px;

      &--thin {
        margin-top: 8px;
        margin-bottom: 8px;

        > div {
          margin-top: 0;
          margin-bottom: 0;
        }
      }
    }

    @media screen and (min-width: 576px) {
      &--thin {
        margin-top: 6px;
      }
    }
  }

  &__fee-card-container {
    width: 100%;
    margin-top: 8px;
    margin-bottom: 8px;

    @media screen and (min-width: 576px) {
      margin-bottom: 0;

      &--three-rows {
        margin-bottom: -16px;
      }
    }
  }

  &__main-quote-summary-container {
    margin-top: 24px;

    @media screen and (max-width: 576px) {
      margin-top: 0;
    }

    &--thin {
      margin-top: 8px;
    }
  }

  &__metamask-rate {
    display: flex;
    margin-top: 8%;
  }

  &__metamask-rate-text {
    @include H7;

    color: $Grey-500;
  }

  &__metamask-rate-info-icon {
    margin-left: 4px;
  }
}

